update README to at least not be wrong

--- a/README
+++ b/README
@@ -14,10 +14,11 @@ How to use the module
 
 Add the following to your node manifest::
 
-  $monit_secret="something secret, something safe"
-  $monit_alert="someone@example.org"
-  $monit_mailserver="mail.example.org"
-  include monit
+  class { 'monit':
+    monit_secret     => "something secret, something safe",
+    monit_alert      => "someone@example.org",
+    monit_mailserver => "mail.example.org"
+  }
 
 This will add a host-only "/etc/monit/monitrc" configuration file, which in
 turn will include any file ending with ".monitrc" in the "/etc/monit/conf.d/"
